--- a/README
+++ b/README
@@ -5,3 +5,5 @@ handler.py is where you handle sent data
 tick.py is where you put the code that you want to happen on each tick.
 
 Examples to come
+
+It seems that, as of now, messages can only be 1022 bytes
